feat(api): add invitation acceptance
